Fix featured Video Overlap issue

--- a/themes/experience-engine/assets/styles/base/post-thumbnail.css
+++ b/themes/experience-engine/assets/styles/base/post-thumbnail.css
@@ -43,6 +43,18 @@
 			width: 100%;
 		}
 	}
+
+	& .placeholder-embedvideo {
+		height: auto;
+		position: relative;
+
+		&::before {
+			content: "";
+			display: block;
+			padding-top: calc((3 / 4) * 100%);
+			width: 100%;
+		}
+	}
 }
 
 .jacapps .post-thumbnail {
